force-app/main/default/objects/FA_Input_Attr_Value_Desc__c/FA_Input_Attr_Value_Desc__c.object-meta.xml
<CustomObject>
    <label>FA Input Attr Value Desc</label>
    <nameField>
        <label>FA Input Attr Value Desc</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FA Input Attr Value Desc</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>