force-app/main/default/objects/FA_Input_Attr_Value_Desc__c/fields/Text_Description_of_AttributeValue__c.field-meta.xml
<CustomField>
    <fullName>Text_Description_of_AttributeValue__c</fullName>
    <label>Text Description of Attribute/Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>