force-app/main/default/objects/FA_Input_Attr_Value_Desc__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Attribute__c</columns>
    <columns>Value__c</columns>
    <columns>Text_Description_of_AttributeValue__c</columns>
    <columns>Display_Order__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>